<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_custom_alert_dialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/font_text"
        android:text="@string/confirm_logout"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/rl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_button_cancel"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnCancel"
            android:background="@drawable/bg_button_ok"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>