<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:background="@drawable/bg_tool"
    android:foreground="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_img_video_history"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_video_history"
            android:scaleType="centerCrop"
            android:src="@drawable/img_default"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_duration_video_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="109dp"
            android:layout_marginTop="73dp"
            android:background="@drawable/bg_video_time"
            android:padding="2dp"
            android:text="@string/video_time"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_video_name_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/cv_1"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:text="@string/video_name"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_channel_name_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_video_name_history"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/cv_1"
        android:fontFamily="sans-serif"
        android:text="@string/author_name"
        android:textColor="#A29D9D" />

    <TextView
        android:id="@+id/tv_total_video_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_channel_name_history"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/cv_1"
        android:fontFamily="sans-serif"
        android:text="@string/views"
        android:textColor="#A29D9D" />
</RelativeLayout>