<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_video"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_video"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="202dp">

            <ImageView
                android:id="@+id/iv_img_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_default"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_duration_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_video_time"
                android:padding="2dp"
                android:text="@string/video_time"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_img_thumb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_img_thumb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/video_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name_channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLength="20"
                        android:text="@string/author_name"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/space"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_totalViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/views"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>