<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D80A0A0A">

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_large_google"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_google"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/font_text"
            android:gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signIn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_signIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_small_google"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/designed_by"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_author"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_google_plus"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_twitter"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </RelativeLayout>
</layout>