<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/sec_controller_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/exo_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:src="@drawable/ic_baseline_replay"
            android:theme="@style/ClickableView"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/exo_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_play_arrow"
            android:theme="@style/ClickableView"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/exo_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_pause"
            android:theme="@style/ClickableView"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/exo_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_baseline_forward"
            android:theme="@style/ClickableView"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sec_controller_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_start"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/separate"
                android:textColor="#CBCDC8" />

            <TextView
                android:id="@+id/exo_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_end"
                android:textColor="#CBCDC8" />

            <ImageView
                android:id="@+id/iv_fullscreen"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/exo_controls_fullscreen_enter"
                android:theme="@style/ClickableView"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/ll_1"
            app:buffered_color="#95989F"
            app:played_color="#FF0000"
            app:scrubber_color="#FF0000"
            app:scrubber_disabled_size="0dp"
            app:scrubber_dragged_size="0dp"
            app:scrubber_enabled_size="0dp"
            app:unplayed_color="#45424E" />
    </RelativeLayout>
</RelativeLayout>